WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
153661
Modern IDB: storage/indexeddb/modern/index-3.html fails
https://bugs.webkit.org/show_bug.cgi?id=153661
Summary
Modern IDB: storage/indexeddb/modern/index-3.html fails
Brady Eidson
Reported
2016-01-29 11:40:19 PST
Modern IDB: storage/indexeddb/modern/index-3.html fails When adding a record triggers an index unique constraint failure, we don't gracefully cleanup everything. (There were FIXMEs to this effect)
Attachments
Patch v1
(6.08 KB, application/octet-stream)
2016-01-29 11:44 PST
,
Brady Eidson
no flags
Details
Patch v1
(6.21 KB, patch)
2016-01-29 11:48 PST
,
Brady Eidson
thorton
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Brady Eidson
Comment 1
2016-01-29 11:44:19 PST
Created
attachment 270232
[details]
Patch v1
Brady Eidson
Comment 2
2016-01-29 11:44:47 PST
This relies on the patch in 153652. I'll mark as patch and for review after that lands.
Brady Eidson
Comment 3
2016-01-29 11:48:17 PST
Created
attachment 270234
[details]
Patch v1
Brady Eidson
Comment 4
2016-01-29 13:23:15 PST
http://trac.webkit.org/changeset/195838
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug