Modern IDB: storage/indexeddb/modern/index-3.html fails. https://bugs.webkit.org/show_bug.cgi?id=153661

Reviewed by Tim Horton.

Source/WebCore:

No new tests (1 failing test now passes, others get closer).

When indexing a new record fails due to uniqueness constraints, remove all traces of the record.

* Modules/indexeddb/server/SQLiteIDBBackingStore.cpp:
(WebCore::IDBServer::SQLiteIDBBackingStore::createIndex):
(WebCore::IDBServer::SQLiteIDBBackingStore::updateAllIndexesForAddRecord):
(WebCore::IDBServer::SQLiteIDBBackingStore::addRecord):

LayoutTests:

* platform/mac-wk1/TestExpectations:

Canonical link: https://commits.webkit.org/171726@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@195838 268f45cc-cd09-0410-ab3c-d52691b4dbfc